Fixing accesibility - contrast

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,6 @@
 .blog h1 {
     font-size: 25px;
-    color: #415154;
+    color: #FFFFFF;
     font-family: 'Prata', serif;
     font-weight: normal;
     letter-spacing: 2px;
